Final commit for homework with changes made

--- a/Heroes_of_Pymoli_completed_FINAL_hw_edits.ipynb
+++ b/Heroes_of_Pymoli_completed_FINAL_hw_edits.ipynb
@@ -726,12 +726,12 @@
     "\n",
     "\n",
     "age_demographics_summary_table_df.style.format({\"Percentage of Players\": \"{:.2f}%\"})\n",
-    "age_demographics_summary_table_df.head()\n"
+    "age_demographics_summary_table_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -797,24 +797,6 @@
        "      <td>2.875584</td>\n",
        "      <td>2.88</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>52</td>\n",
-       "      <td>2.994423</td>\n",
-       "      <td>2.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>33</td>\n",
-       "      <td>3.404545</td>\n",
-       "      <td>3.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&gt;40</th>\n",
-       "      <td>7</td>\n",
-       "      <td>3.075714</td>\n",
-       "      <td>3.08</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -826,13 +808,10 @@
        "10-14                  54            2.900000                           2.90\n",
        "15-19                 200            3.107800                           3.11\n",
        "20-24                 325            3.020431                           3.02\n",
-       "25-29                  77            2.875584                           2.88\n",
-       "30-34                  52            2.994423                           2.99\n",
-       "35-39                  33            3.404545                           3.40\n",
-       ">40                     7            3.075714                           3.08"
+       "25-29                  77            2.875584                           2.88"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,11 +838,10 @@
     "\n",
     "#Format Purchasing Analysis by Age Summary Table\n",
     "age_purchase_analysis_summary_table_df.style.format({\"Avg Purchase Price\":\"${:,.2f}\", \n",
-    "                                                  \"Total Purchase Value\":\"${:.2f}\", \n",
-    "                                                  \"Avg Purchase Per Person\":\"${:.2f}\"})\n",
-    "age_purchase_analysis_summary_table_df\n",
+    "                                                  \"Total Purchase Value\":\"${:,.2f}\", \n",
+    "                                                  \"Avg Purchase Per Person\":\"${:,.2f}\"})\n",
     "\n",
-    "# age_purchase_analysis_summary_table_df.head()"
+    "age_purchase_analysis_summary_table_df.head()"
    ]
   },
   {
